# FinoTechy

./: .gitignore  hello.py  pyproject.toml
alembic/: env.py
alembic/versions/: 94c083306075_initial_schema.py
app/: main.py
app/models/: financial.py  invoice.py  user.py
app/routes/: auth.py  invoice.py  virtual_card.py  wallet.py
app/schemas/: financial.py  invoice.py  user.py
app/services/: auth_service.py  invoice_service.py  virtual_card_service.py  wallet_service.py
